k8s/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: degencast-namespace-test
  name: degencast-namespace-test
